src/ref/raylib.h

    typedef enum bool { false, true } bool;
typedef struct Vector2 {
    float x;                
    float y;                
} Vector2;
typedef struct Vector3 {
    float x;                
    float y;                
    float z;                
} Vector3;
typedef struct Matrix {
    float m0, m4, m8, m12;  
    float m1, m5, m9, m13;  
    float m2, m6, m10, m14; 
    float m3, m7, m11, m15; 
} Matrix;
typedef struct Color {
    unsigned char r;        
    unsigned char g;        
    unsigned char b;        
    unsigned char a;        
} Color;
typedef struct Rectangle {
    float x;                
    float y;                
    float width;            
    float height;           
} Rectangle;
typedef struct Image {
    void *data;             
    int width;              
    int height;             
    int mipmaps;            
    int format;             
} Image;
typedef struct Texture {
    unsigned int id;        
    int width;              
    int height;             
    int mipmaps;            
    int format;             
} Texture;
typedef Texture Texture2D;
typedef struct GlyphInfo {
    int value;              
    int offsetX;            
    int offsetY;            
    int advanceX;           
    Image image;            
} GlyphInfo;
typedef struct Font {
    int baseSize;           
    int glyphCount;         
    int glyphPadding;       
    Texture2D texture;      
    Rectangle *recs;        
    GlyphInfo *glyphs;      
} Font;
typedef struct Mesh {
    int vertexCount;        
    int triangleCount;      
    float *vertices;        
    float *texcoords;       
    float *texcoords2;      
    float *normals;         
    float *tangents;        
    unsigned char *colors;      
    unsigned short *indices;    
    float *animVertices;    
    float *animNormals;     
    unsigned char *boneIds; 
    float *boneWeights;     
    unsigned int vaoId;     
    unsigned int *vboId;    
} Mesh;
typedef struct Material {
    Shader shader;          
    MaterialMap *maps;      
    float params[4];        
} Material;
typedef struct Transform {
    Vector3 translation;    
    Quaternion rotation;    
    Vector3 scale;          
} Transform;
typedef struct BoneInfo {
    char name[32];          
    int parent;             
} BoneInfo;
typedef struct Model {
    Matrix transform;       
    int meshCount;          
    int materialCount;      
    Mesh *meshes;           
    Material *materials;    
    int *meshMaterial;      
    int boneCount;          
    BoneInfo *bones;        
    Transform *bindPose;    
} Model;
typedef struct Ray {
    Vector3 position;       
    Vector3 direction;      
} Ray;
typedef struct BoundingBox {
    Vector3 min;            
    Vector3 max;            
} BoundingBox;
RLAPI Font GetFontDefault(void);                                                            
RLAPI Font LoadFont(const char *fileName);                                                  
RLAPI Font LoadFontEx(const char *fileName, int fontSize, int *fontChars, int glyphCount);  
RLAPI Font LoadFontFromImage(Image image, Color key, int firstChar);                        
RLAPI Font LoadFontFromMemory(const char *fileType, const unsigned char *fileData, int dataSize, int fontSize, int *fontChars, int glyphCount); 
RLAPI GlyphInfo *LoadFontData(const unsigned char *fileData, int dataSize, int fontSize, int *fontChars, int glyphCount, int type);      
RLAPI Image GenImageFontAtlas(const GlyphInfo *chars, Rectangle **recs, int glyphCount, int fontSize, int padding, int packMethod);      
RLAPI void UnloadFontData(GlyphInfo *chars, int glyphCount);                                 
RLAPI void UnloadFont(Font font);                                                           
RLAPI void DrawFPS(int posX, int posY);                                                     
RLAPI void DrawText(const char *text, int posX, int posY, int fontSize, Color color);       
RLAPI void DrawTextEx(Font font, const char *text, Vector2 position, float fontSize, float spacing, Color tint);    
RLAPI void DrawTextPro(Font font, const char *text, Vector2 position, Vector2 origin, float rotation, float fontSize, float spacing, Color tint); 
RLAPI void DrawTextCodepoint(Font font, int codepoint, Vector2 position, float fontSize, Color tint);   
RLAPI int MeasureText(const char *text, int fontSize);                                      
RLAPI Vector2 MeasureTextEx(Font font, const char *text, float fontSize, float spacing);    
RLAPI int GetGlyphIndex(Font font, int codepoint);                                          
RLAPI GlyphInfo GetGlyphInfo(Font font, int codepoint);                                     
RLAPI Rectangle GetGlyphAtlasRec(Font font, int codepoint);                                 
zaher
RLAPI int *LoadCodepoints(const char *text, int *count);              
RLAPI void UnloadCodepoints(int *codepoints);                         
RLAPI int GetCodepointCount(const char *text);                        
RLAPI int GetCodepoint(const char *text, int *bytesProcessed);        
RLAPI const char *CodepointToUTF8(int codepoint, int *byteSize);      
RLAPI char *TextCodepointsToUTF8(int *codepoints, int length);        
RLAPI int TextCopy(char *dst, const char *src);                                             
RLAPI bool TextIsEqual(const char *text1, const char *text2);                               
RLAPI unsigned int TextLength(const char *text);                                            
RLAPI const char *TextFormat(const char *text, ...);                                        
RLAPI const char *TextSubtext(const char *text, int position, int length);                  
RLAPI char *TextReplace(char *text, const char *replace, const char *by);                   
RLAPI char *TextInsert(const char *text, const char *insert, int position);                 
RLAPI const char *TextJoin(const char **textList, int count, const char *delimiter);        
RLAPI const char **TextSplit(const char *text, char delimiter, int *count);                 
RLAPI void TextAppend(char *text, const char *append, int *position);                       
RLAPI int TextFindIndex(const char *text, const char *find);                                
RLAPI const char *TextToUpper(const char *text);                      
RLAPI const char *TextToLower(const char *text);                      
RLAPI const char *TextToPascal(const char *text);                     
RLAPI int TextToInteger(const char *text);                            
RLAPI void DrawLine3D(Vector3 startPos, Vector3 endPos, Color color);                                    
RLAPI void DrawPoint3D(Vector3 position, Color color);                                                   
RLAPI void DrawCircle3D(Vector3 center, float radius, Vector3 rotationAxis, float rotationAngle, Color color); 
RLAPI void DrawTriangle3D(Vector3 v1, Vector3 v2, Vector3 v3, Color color);                              
RLAPI void DrawTriangleStrip3D(Vector3 *points, int pointCount, Color color);                           
RLAPI void DrawCube(Vector3 position, float width, float height, float length, Color color);             
RLAPI void DrawCubeV(Vector3 position, Vector3 size, Color color);                                       
RLAPI void DrawCubeWires(Vector3 position, float width, float height, float length, Color color);        
RLAPI void DrawCubeWiresV(Vector3 position, Vector3 size, Color color);                                  
RLAPI void DrawCubeTexture(Texture2D texture, Vector3 position, float width, float height, float length, Color color); 
RLAPI void DrawCubeTextureRec(Texture2D texture, Rectangle source, Vector3 position, float width, float height, float length, Color color); 
RLAPI void DrawSphere(Vector3 centerPos, float radius, Color color);                                     
RLAPI void DrawSphereEx(Vector3 centerPos, float radius, int rings, int slices, Color color);            
RLAPI void DrawSphereWires(Vector3 centerPos, float radius, int rings, int slices, Color color);         
RLAPI void DrawCylinder(Vector3 position, float radiusTop, float radiusBottom, float height, int slices, Color color); 
RLAPI void DrawCylinderEx(Vector3 startPos, Vector3 endPos, float startRadius, float endRadius, int sides, Color color); 
RLAPI void DrawCylinderWires(Vector3 position, float radiusTop, float radiusBottom, float height, int slices, Color color); 
RLAPI void DrawCylinderWiresEx(Vector3 startPos, Vector3 endPos, float startRadius, float endRadius, int sides, Color color); 
RLAPI void DrawPlane(Vector3 centerPos, Vector2 size, Color color);                                      
RLAPI void DrawRay(Ray ray, Color color);                                                                
RLAPI void DrawGrid(int slices, float spacing);                                                          
RLAPI Model LoadModel(const char *fileName);                                                
RLAPI Model LoadModelFromMesh(Mesh mesh);                                                   
RLAPI void UnloadModel(Model model);                                                        
RLAPI void UnloadModelKeepMeshes(Model model);                                              
RLAPI BoundingBox GetModelBoundingBox(Model model);                                         