src/ref/raylib3.0.h

RLAPI void DrawGizmo(Vector3 position);                                                                  