src/ref/RayLib.pas


  // Get the default Font
  GetFontDefault: function: TFont; cdecl;
  // Load font from file into GPU memory (VRAM)
  LoadFont: function(const fileName: PUTF8Char): TFont; cdecl;
  // Load font from file with extended parameters
  LoadFontEx: function(const fileName: PUTF8Char; fontSize: Integer; fontChars: PInteger; glyphCount: Integer): TFont; cdecl;
  // Load font from Image (XNA style)
  LoadFontFromImage: function(image: TImage; key: TColor; firstChar: Integer): TFont; cdecl;
  // Load font from memory buffer, fileType refers to extension: i.e. "ttf"
  LoadFontFromMemory: function(const fileType: PUTF8Char; fileData: PByte; dataSize: Integer; fontSize: Integer; fontChars: PInteger; glyphCount: Integer): TFont; cdecl;
  // Load font data for further use
  LoadFontData: function(fileData: PByte; dataSize, fontSize: Integer; fontChars: PInteger; glyphCount: Integer; &type: Integer): PGlyphInfo; cdecl;
  // Generate image font atlas using chars info
  GenImageFontAtlas: function(const chars: PGlyphInfo; recs: PPRectangle; glyphCount: Integer; fontSize: Integer; padding: Integer; packMethod: Integer): TImage; cdecl;
  // Unload font chars info data (RAM)
  UnloadFontData: procedure(fileData: PGlyphInfo; glyphCount: Integer); cdecl;
  // Unload Font from GPU memory (VRAM)
  UnloadFont: procedure(font: TFont); cdecl;

  { Text drawing functions }

  // Draw current FPS
  DrawFPS: procedure(posX: Integer; posY: Integer); cdecl;
  // Draw text (using default font)
  DrawText: procedure(const Text: PUTF8Char; posX: Integer; posY: Integer; FontSize: Integer; Color: TColor); cdecl;
  // Draw text using font and additional parameters
  DrawTextEx: procedure(font: TFont; const text: Pointer; position: TVector2; fontSize: Single; spacing: Single; tint: TColor); cdecl;
  // Draw text using Font and pro parameters (rotation)
  DrawTextPro: procedure(Font: TFont; const text: PUTF8Char; Position: TVector2; origin: TVector2; Rotation: Single; fontSize: Single; spacing: Single; tint: TColor);

  // Draw text using font inside rectangle limits with support for text selection
  DrawTextCodepoint: procedure(font: TFont; codepoint: Integer; position: TVector2; fontSize: Single; tint: TColor); cdecl;

  // Text font info functions

  // Measure string width for default font
  MeasureText: function(const text: PUTF8Char; fontSize: Integer): Integer; cdecl;
  // Measure string size for Font
  MeasureTextEx: function(font: TFont; const text: PUTF8Char; fontSize: Single; spacing: Single): TVector2; cdecl;
  // Get glyph index position in font for a codepoint (unicode character), fallback to '?' if not found
  GetGlyphIndex: function(font: TFont; codepoint: Integer): Integer; cdecl;
  // Get glyph font info data for a codepoint (unicode character), fallback to '?' if not found
  GetGlyphInfo: function(Font: TFont; codepoint: Integer): TGlyphInfo; cdecl;
  // Get glyph rectangle in font atlas for a codepoint (unicode character), fallback to '?' if not found
  GetGlyphAtlasRec: function(Font: TFont; codepoint: integer): TRectangle; cdecl;

  // Text codepoints management functions (unicode characters)
  // Load all codepoints from a UTF-8 text string, codepoints count returned by parameter
  LoadCodepoints: function(text: PUtf8Char; count: PInteger): PInteger; cdecl;
  // Unload codepoints data from memory
  UnloadCodepoints: procedure(codepoints: PInteger); cdecl;
  // Get total number of codepoints in a UTF-8 encoded string
  GetCodepointCount: function(text: PUTF8Char): Integer; cdecl;
  // Get next codepoint in a UTF-8 encoded string, 0x3f('?') is returned on failure
  GetCodepoint: function(text: PUTF8Char; bytesProcessed: PInteger): Integer; cdecl;
  // Encode one codepoint into UTF-8 byte array (array length returned as parameter)
  CodepointToUTF8: function(codepoint: Integer; byteSize: PInteger): PUtf8Char; cdecl;
  // Encode text as codepoints array into UTF-8 text string (WARNING: memory must be freed!)
  TextCodepointsToUTF8: function(codepoints: PInteger; length: Integer): PUTf8Char; cdecl;

  // Text strings management functions (no UTF-8 strings, only byte chars)
  // NOTE: Some strings allocate memory internally for returned strings, just be careful!

  // Copy one string to another, returns bytes copied
  TextCopy: function(dst: PUTF8Char; const src: PUTF8Char): Integer; cdecl;
  // Check if two text string are equal
  TextIsEqual: function(const text1: PUTF8Char; const text2: PUTF8Char): Boolean; cdecl;
  // Get text length, checks for '\0' ending
  TextLength: function(const text: PUTF8Char): Cardinal; cdecl;
  // Text formatting with variables (sprintf() style)
  TextFormat: function(const text: PUTF8Char): PUTF8Char varargs; cdecl;
  // Get a piece of a text string
  TextSubtext: function(const text: PUTF8Char; position: Integer; length: Integer): PUTF8Char; cdecl;
  // WARNING: Replace text string (memory must be freed!)
  TextReplace: function(text: PUTF8Char; const replace: PUTF8Char; const by: PUTF8Char): PUTF8Char; cdecl;
  // WARNING: Insert text in a position (memory must be freed!)
  TextInsert: function(const text: PUTF8Char; const insert: PUTF8Char; position: Integer): PUTF8Char; cdecl;
  // Join text strings with delimiter
  TextJoin: function(textList: PPUTF8Char; count: Integer; const delimiter: PUTF8Char): PUTF8Char; cdecl;
  // Split text into multiple strings
  TextSplit: function(const text: PUTF8Char; delimiter: UTF8Char; count: PInteger): PPUTF8Char; cdecl;
  // Append text at specific position and move cursor!
  TextAppend: procedure(text: PUTF8Char; const append: PUTF8Char; position: PInteger); cdecl;
  // Find first text occurrence within a string
  TextFindIndex: function(const text: PUTF8Char; const find: PUTF8Char): Integer; cdecl;
  // Get upper case version of provided string
  TextToUpper: function(const text: PUTF8Char): PUTF8Char; cdecl;
  // Get lower case version of provided string
  TextToLower: function(const text: PUTF8Char): PUTF8Char; cdecl;
  // Get Pascal case notation version of provided string
  TextToPascal: function(const text: PUTF8Char): PUTF8Char; cdecl;
  // Get integer value from text (negative values not supported)
  TextToInteger: function(const text: PUTF8Char): Integer; cdecl;

//------------------------------------------------------------------------------------
// Basic 3d Shapes Drawing Functions (Module: models)
//------------------------------------------------------------------------------------

  { Basic geometric 3D shapes drawing functions }

  // Draw a line in 3D world space
  DrawLine3D: procedure(startPos: TVector3; endPos: TVector3; color: TColor); cdecl;
  // Draw a point in 3D space, actually a small line
  DrawPoint3D: procedure(position: TVector3; color: TColor); cdecl;
  // Draw a circle in 3D world space
  DrawCircle3D: procedure(center: TVector3; radius: Single; rotationAxis: TVector3; rotationAngle: Single; color: TColor); cdecl;
  // Draw a color-filled triangle (vertex in counter-clockwise order!)
  DrawTriangle3D: procedure(v1: TVector3; v2: TVector3; v3: TVector3; color: TColor); cdecl;
  // Draw a triangle strip defined by points
  DrawTriangleStrip3D: procedure(Points: PVector3; pointCount: integer; Color: TColor); cdecl;
  // Draw cube
  DrawCube: procedure(position: TVector3; width: Single; height: Single; length: Single; color: TColor); cdecl;
  // Draw cube (Vector version)
  DrawCubeV: procedure(position: TVector3; size: TVector3; color: TColor); cdecl;
  // Draw cube wires
  DrawCubeWires: procedure(position: TVector3; width: Single; height: Single; length: Single; color: TColor); cdecl;
  // Draw cube wires (Vector version)
  DrawCubeWiresV: procedure(position: TVector3; size: TVector3; color: TColor); cdecl;
  // Draw cube textured
  DrawCubeTexture: procedure(texture: TTexture2D; position: TVector3; width: Single; height: Single; length: Single; color: TColor); cdecl;
  // Draw cube with a region of a texture
  DrawCubeTextureRec: procedure(Texture: TTexture2D; source: TRectangle; position: TVector3; width: Single; height: Single; length: Single; Color: TColor); cdecl;
  // Draw sphere
  DrawSphere: procedure(centerPos: TVector3; radius: Single; color: TColor); cdecl;
  // Draw sphere with extended parameters
  DrawSphereEx: procedure(centerPos: TVector3; radius: Single; rings: Integer; slices: Integer; color: TColor); cdecl;
  // Draw sphere wires
  DrawSphereWires: procedure(centerPos: TVector3; radius: Single; rings: Integer; slices: Integer; color: TColor); cdecl;
  // Draw a cylinder/cone
  DrawCylinder: procedure(position: TVector3; radiusTop: Single; radiusBottom: Single; height: Single; slices: Integer; color: TColor); cdecl;
  // Draw a cylinder with base at startPos and top at endPos
  DrawCylinderEx: procedure(startPos: TVector3; endPos: TVector3; startRadius: Single; endRadius: Single; sides: Integer; Color: TColor); cdecl;
  // Draw a cylinder/cone wires
  DrawCylinderWires: procedure(position: TVector3; radiusTop: Single; radiusBottom: Single; height: Single; slices: Integer; color: TColor); cdecl;
  // Draw a cylinder wires with base at startPos and top at endPos
  DrawCylinderWiresEx: procedure(startPos: TVector3; endPos: TVector3; startRadius: Single; endRadius: Single; sides: Integer; Color: TColor); cdecl;
  // Draw a plane XZ
  DrawPlane: procedure(centerPos: TVector3; size: TVector2; color: TColor); cdecl;
  // Draw a ray line
  DrawRay: procedure(ray: TRay; color: TColor); cdecl;
  // Draw a grid (centered at (0, 0, 0))
  DrawGrid: procedure(slices: Integer; spacing: Single); cdecl;
  // Draw simple gizmo
  DrawGizmo: procedure(position: TVector3); cdecl;
//DrawTorus(), DrawTeapot() could be useful?

//------------------------------------------------------------------------------------
// Model 3d Loading and Drawing Functions (Module: models)
//------------------------------------------------------------------------------------

  { Model loading/unloading functions }

  // Load model from files (meshes and materials)
  LoadModel: function(const fileName: PUTF8Char): TModel; cdecl;
  // Load model from generated mesh (default material)
  LoadModelFromMesh: function(mesh: TMesh): TModel; cdecl;
  // Unload model from memory (RAM and/or VRAM)
  UnloadModel: procedure(model: TModel); cdecl;
  // Unload model (but not meshes) from memory (RAM and/or VRAM)
  UnloadModelKeepMeshes: procedure(model: TModel); cdecl;
  // Compute model bounding box limits (considers all meshes)
  GetModelBoundingBox: function(Model: TModel): TBoundingBox; cdecl;

  { Model drawing functions }
